--- a/src/components/home/AdvertisingSlide.css
+++ b/src/components/home/AdvertisingSlide.css
@@ -1,23 +1,20 @@
-.main-slide {
-    width: 1480px;
-    margin: 0 auto;
-    position: relative;
-    height: auto;
+.main-content {
+    width: 100%;
 }
-.slide-img {
-    display: flex;
-    justify-content: center;
-    width: auto;
+.main-slide {
+    width: 100%;
     height: 700px;
+    position: relative;
 }
 .slide-img li {
+    position: relative;
     margin: 0px 20px;
 }
-.slide-img> li> img {
-    width: 1480px;
-    height: 700px;
+
+.slide-img>li>img {
     border-radius: 30px;
 }
+
 .page-btn {
     position: absolute;
     width: 60px;
@@ -29,26 +26,83 @@
     background-color: rgba(0, 0, 0, 0.5);
     border-radius: 50%;
     cursor: pointer;
-    z-index: 1;
+    z-index: 200;
 }
+
 .page-left-btn {
     left: 5%;
 }
+
 .page-left-btn:hover {
     background-color: rgba(0, 0, 0, 0.832);
 }
+
 .page-right-btn {
-    right: 3%;
+    right: 5%;
 }
+
 .page-right-btn:hover {
     background-color: rgba(0, 0, 0, 0.832);
 }
+
 .page-btn.visible {
-    opacity: 1; /* isHovered 상태일 때 투명도를 1로 설정하여 나타나게 함 */
+    opacity: 1;
 }
-i {
+
+.main-slide i {
     font-weight: bold;
     font-size: 3rem;
     color: white;
     flex-shrink: 0;
+}
+
+.visible {
+    display: block;
+}
+
+.hidden {
+    display: none;
+}
+
+/* .slide-img {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin: 0;
+    padding: 0;
+} */
+
+.slide-img {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+}
+/* .slide-item {
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    transition: opacity 1.5s ease;
+} */
+
+/* .slide-item.active {
+    opacity: 1;
+} */
+
+.slide-image {
+    /* width: 100%; */
+    height: auto;
+    filter: blur(1px); 
+    transition: filter 1s ease;
+}
+
+.img-view {
+    filter: blur(0); /* 선명하게 설정 */
 }
