--- a/src/components/home/EventBox.css
+++ b/src/components/home/EventBox.css
@@ -4,6 +4,12 @@
     padding: 0;
     margin-top: 150px;
 }
+.event-box-img-wrap {
+    width: 1460px;
+    margin: 0 auto;
+    padding: 0;
+}
+
 .event-box-header> h1 {
     text-align: center;
     margin: 10px;
@@ -15,7 +21,10 @@
 }
 .event-box-img {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
+    list-style-type: none;
+    margin: 80px 0px;
+    padding: 0;
 }
 .event-box-img> li {
     cursor: pointer;
@@ -24,9 +33,10 @@
     text-align: center;
 }
 .event-box-img img {
-    width: 500px;
+    flex: 1;
+    width: 470px;
     height: 250px;
-    margin: 50px 10px 10px 10px;
+    margin: 0px 10px;
     border-radius: 10px;
 }
 .event-name {
