7월22일 학원 오전

--- a/src/components/home/ShoppingCart.css
+++ b/src/components/home/ShoppingCart.css
@@ -1,192 +1,17 @@
-.shopping-cart-title {
-    height: 30px;
-    line-height: 30px;
-    margin: 0;
-    padding: 0;
+.shopping-cart-wrap {
+    width: 100%;
+    margin: 0 auto;
 }
-.shopping-cart-item {
-    display: flex;
-    flex-wrap: nowrap;
+.shopping-cart-modal {
+    width: 400px;
+}
+.shopping-window-top {
+    height: 40px;
+}
+.shopping-window-top img {
+
 }
 .shopping-cart-modal img {
     width: 80px;
     height: 80px;
-    margin: 0px 30px 0px 0px;
-    padding: 0;
-}
-.shopping-cart-color {
-    height: 60px;
-}
-.shopping-cart-color> span {
-    float: left;
-    font-size: 14px;
-}
-.shopping-cart-color-ul {
-    display: flex;
-    margin: 0;
-    padding: 0px 40px;
-}
-.shopping-cart-color-ul> li {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 30px;
-    height: 30px;
-    border: 1px solid #aaa;
-    margin-right: 3px;
-}    
-.shopping-cart-color-ul> li> div {
-    width: 20px;
-    height: 20px;
-    border: 1px solid #aaa;
-}
-.shopping-cart-color> p {
-    margin: 0px 0px 0px 67px;
-    font-size: 12px;
-
-}
-.shopping-cart-size> span {
-    float: left;
-    font-size: 14px;
-}
-.shopping-cart-size-ul {
-    display: flex;
-    margin: 0;
-    padding: 0px 26px;
-}
-.shopping-cart-size-ul> li {
-    font-size: 10px;
-    text-align: center;
-    width: 30px;
-    height: 30px;
-    line-height: 30px;
-    color: black;
-    border: 1px solid #aaa;
-    margin-right: 3px;
-}    
-.shopping-cart-size> p {
-    margin: 0px 0px 0px 67px;
-    font-size: 12px;
-}
-.shopping-cart-guide {
-    display: flex;
-    flex-wrap: nowrap;
-    align-items: center;
-    height: 30px;
-    line-height: 30px;
-}
-.shopping-cart-guide> div {
-    font-size: 16px;
-    width: 15px;
-    height: 15px;
-    line-height: 15px;
-    text-align: center;
-    font-weight: bold;
-    color: red;
-    border: 1px solid #aaa;
-    margin-right: 5px;
-}
-.shopping-cart-guide> p {
-    font-size: 12px;
-    color: red;
-    margin: 0;
-    padding: 0;
-}
-.shopping-cart-selected {
-    height: auto;
-}
-.shopping-cart-btn {
-    display: flex;
-    height: 30px;
-    justify-content: center;
-    margin: 0;
-    padding: 0;
-}
-.shopping-cart-btn> li {
-    width: 120px;
-    height: 30px;
-    line-height: 30px;
-    font-size: 13px;    
-    text-align: center;
-    margin-left: 5px;
-    border: 1px solid #aaa;
-}
-.shopping-cart-btn> li:nth-child(1) {
-    background-color: black;
-    color: white;
-}
-.shopping-cart-btn> li:nth-child(2) {
-    background-color: white;
-    color: black;
-}
-.shopping-cart-total-title {
-    font-size: 12px;
-}
-.shopping-cart-total-amt {
-    font-size: 18px;
-    color: rgb(46, 181, 234);
-}
-.shopping-cart-total-cnt {
-    font-size: 12px;
-    color: rgb(46, 181, 234);
-}
-.disabled {
-    background-color: #aaa;
-    cursor: not-allowed; /* 비활성화 상태의 커서 */
-    pointer-events: none; /* 클릭 이벤트 차단 */
-}
-.shopping-cart-selected-item {
-    display: flex;
-    align-items: center;
-    height: 40px;
-    border-bottom: 1px solid #aaa;
-    margin: 10px 0px;
-
-}
-.shopping-cart-selected-namecolor {
-    width: 280px;
-    display: flex;
-    flex-wrap: wrap;
-}
-.shopping-cart-selected-name {
-    font-size: 13px;
-    font-weight: bold;
-    width: 280px;
-}
-.shopping-cart-selected-color {
-    font-size: 12px;
-}
-.shopping-cart-selected-count> input {
-    width: 20px;
-    margin-right: 3px;
-    text-align: right;
-    font-size: 13px;
-}
-.shopping-cart-selected-updown {
-    width: 15px;
-    height: 26px;
-    display: flex;
-    flex-wrap: wrap;
-}    
-.shopping-cart-selected-updown> img {
-    width: 15px;
-    height: 13px;
-    margin: 0;
-    padding: 0;
-}
-.shopping-cart-selected-delete> img {
-    width: 13px;
-    height: 13px;
-    margin: 0px 20px;
-}
-.shopping-cart-selected-amt {
-    font-size: 13px;   
-    font-weight: bold;
-    text-align: right;
-    width: 200px;
-    color: rgb(46, 181, 234);
-}
-.hr {
-    margin: 0;
-    padding: 0;
 }
