--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,9 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
+@import url("https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap");
 body, html, #root {
   margin: 0;
   padding: 0;
   width: 100%;
   height: 100%;
+  font-family: "Nanum Gothic", sans-serif;
 }
