--- a/src/components/home/AdvertisingSlide.css
+++ b/src/components/home/AdvertisingSlide.css
@@ -2,35 +2,35 @@
     width: 100%;
 }
 .main-slide {
-    width: 100%;
+    width: 1460px;
     height: 700px;
     position: relative;
+    overflow: hidden;
+    margin: 0 auto;
+    padding: 0;
+    border-radius: 30px;
 }
 .slide-img {
-    position: relative;
+    position: absolute;
     display: flex;
     justify-content: center;
-    overflow: hidden;
-    width: 1460px;
+    width: auto;
     height: 100%;
-    margin: 0 auto;
+    margin: 0;
     padding: 0;
 }
 .slide-img li {
     list-style: none;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    opacity: 0;
+    width: 1460px;
+    height: 700px;
     transition: opacity 1s ease, transform 1s ease;
 }
 .slide-img li.active {
-    opacity: 1;
-    transform: translateX(0);
+    transform: scale(1.15);
 }
-.slide-img li:not(.active) {
-    transform: translateX(100%);
-}
+/* .slide-img li:not(.active) {
+    transform: scale(1);
+} */
 .slide-img li img {
     width: 100%;
     height: 100%;
@@ -50,10 +50,10 @@
     z-index: 200;
 }
 .page-left-btn {
-    left: 15%;
+    left: 5%;
 }
 .page-right-btn {
-    right: 15%;
+    right: 5%;
 }
 .page-left-btn:hover,
 .page-right-btn:hover {
@@ -142,7 +142,7 @@
     left: 50%;
     background-color: #aaa;
     text-align: center;
-    /* font-weight: bold; */
+    font-weight: bold;
     border-radius: 15px;
     opacity: 0.8;
 }
