--- a/src/App.css
+++ b/src/App.css
@@ -17,22 +17,22 @@ li {
   display: flex;
   flex-wrap: nowrap;
   justify-content: center;
+  width: 1460px; /* 자식 요소의 너비를 100%로 설정 */
   height: 100px;
   top: 0;
   left: 0;
   right: 0;
   z-index: 100;
-  width: 100%; /* 자식 요소의 너비를 100%로 설정 */
   box-sizing: border-box; /* padding과 border를 포함한 너비를 설정 */
   background-color: white;
+  margin: 0 auto;
 }
 .header-logo {
   width: 25%;
-  margin: 0px 20px;
+  margin: 0px 0px;
 }
 h1 {
   font-weight: bold;
-  margin-left: 30px;
   cursor: pointer;
 }
 .main-menu-wrap {
